# toybox

./: pyproject.toml
.github/workflows/: ci.yml
src/: mycli.py
src/toybox/: mytoys.py
